{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 32,
  "lineage": "78fa71af-9f02-5484-9bcd-bef2e7ed8206",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "medusa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:977099004021:internet-gateway/igw-08bdf5438706452a1",
            "id": "igw-08bdf5438706452a1",
            "owner_id": "977099004021",
            "tags": {
              "Name": "medusa-igw"
            },
            "tags_all": {
              "Name": "medusa-igw"
            },
            "vpc_id": "vpc-0a9bd9f2f4a0a1d1d"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "medusa_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "medusa-access-logs-bucket",
                "enabled": true,
                "prefix": "log"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:977099004021:loadbalancer/app/medusa-lb/5d734109a1adcd5b",
            "arn_suffix": "app/medusa-lb/5d734109a1adcd5b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "medusa-lb-1308312565.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:977099004021:loadbalancer/app/medusa-lb/5d734109a1adcd5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "medusa-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-006b0b07e94deb9a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05237de4da7d33c2e"
              },
              {
                "subnet_id": "subnet-0c7feb426fb4ef319"
              }
            ],
            "subnets": [
              "subnet-05237de4da7d33c2e",
              "subnet-0c7feb426fb4ef319"
            ],
            "tags": {
              "Name": "medusa-lb"
            },
            "tags_all": {
              "Name": "medusa-lb"
            },
            "vpc_id": "vpc-0a9bd9f2f4a0a1d1d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_s3_bucket.medusa_logs",
            "aws_security_group.medusa_sg",
            "aws_subnet.additional_subnet",
            "aws_subnet.medusa_subnet",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "medusa_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:977099004021:route-table/rtb-0e5d19929cf36787b",
            "id": "rtb-0e5d19929cf36787b",
            "owner_id": "977099004021",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08bdf5438706452a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medusa-route-table"
            },
            "tags_all": {
              "Name": "medusa-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9bd9f2f4a0a1d1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be9529f64e44f644",
            "route_table_id": "rtb-0e5d19929cf36787b",
            "subnet_id": "subnet-0c7feb426fb4ef319"
          },
          "dependencies": [
            "aws_internet_gateway.medusa_igw",
            "aws_route_table.medusa_route_table",
            "aws_subnet.medusa_subnet",
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "medusa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:977099004021:security-group/sg-006b0b07e94deb9a4",
            "description": "Allow traffic on port 9000 for the Medusa application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006b0b07e94deb9a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "medusa-sg",
            "name_prefix": "",
            "owner_id": "977099004021",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9bd9f2f4a0a1d1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "additional_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:977099004021:subnet/subnet-05237de4da7d33c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05237de4da7d33c2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977099004021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "additional-subnet"
            },
            "tags_all": {
              "Name": "additional-subnet"
            },
            "vpc_id": "vpc-0a9bd9f2f4a0a1d1d"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "medusa_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:977099004021:subnet/subnet-0c7feb426fb4ef319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7feb426fb4ef319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977099004021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "medusa-subnet"
            },
            "tags_all": {
              "Name": "medusa-subnet"
            },
            "vpc_id": "vpc-0a9bd9f2f4a0a1d1d"
          },
          "dependencies": [
            "aws_vpc.medusa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "medusa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:977099004021:vpc/vpc-0a9bd9f2f4a0a1d1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011076967d102f4c0",
            "default_route_table_id": "rtb-0ef2f2babec3ae0cd",
            "default_security_group_id": "sg-08aa908306fc7de5c",
            "dhcp_options_id": "dopt-0d4f0997067a400ca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9bd9f2f4a0a1d1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef2f2babec3ae0cd",
            "owner_id": "977099004021",
            "tags": {
              "Name": "medusa-vpc"
            },
            "tags_all": {
              "Name": "medusa-vpc"
            }
          }
        }
      ]
    }
  ]
}